--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,6 @@ body {
     font-family: 'Nunito', sans-serif;
 }
 
-
-
 #header img {
 width: 150px;
 }
@@ -12,37 +10,48 @@ width: 150px;
     background-color: white !important;
 }
 
-.background-wrap {
-    position: fixed;
-    z-index: -1;
+.main::after {
+    content: "";
+    display: block;
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    top: 176px;
-    left: 0;
-}
-
-#video-bg {
+    background-color: #333;
+    /* background-image: linear-gradient(to right, #646605, #005f7c); */
     position: absolute;
     top: 0;
     left: 0;
-    min-height: 100%;
-    min-width: 100%;
+    opacity: 0.8;
+}
+.main {
+    position: relative;
+    background-image: url(../img/virreyes.jpeg);
+    padding: 20vh 0;
+    background-size: cover;
+    text-align: center;
+    height: 70vh;
 }
 
-.content {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    z-index: 0;
-    background-color: rgba(0, 0, 0, 0.7);
+.main > * {
+    z-index: 1;
+    position: relative;
 }
 
+.main h2 {
+    color: white;
+    font-size: 60px;
+    letter-spacing: 5px;
+}
 
-.content h2{
-  color: white;
-  text-align: center;
-  margin-top: 20%;
-  font-size: 50px;
+#footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid red;
+}
+
+#footer ul {
+    display: flex;
+    flex-direction: row;
 }
 
