se corrigió el h2 y el footer, que se rompían en Mobile, se arregló con media query

--- a/css/main.css
+++ b/css/main.css
@@ -108,3 +108,15 @@ width: 150px;
     color: #2867B2;  
 }
 
+
+@media only screen and (max-width: 600px) {
+    #footer {
+        height: 140px;
+        flex-direction: column;
+        text-align: center;
+    }
+    .main h2 {
+        font-size: 40px;
+        }
+}
+
