--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,7 @@ width: 150px;
     color: white;
     font-size: 60px;
     letter-spacing: 5px;
+    font-family: 'Nunito', sans-serif;
 }
 
 #footer {
