--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ width: 150px;
     height: 70px;
     padding: 0 50px;
     padding-top: 20px;
-    background-color: silver;
+    background-color: #c4c4c4;
     font-weight: bold;
 
 }
@@ -133,19 +133,10 @@ width: 150px;
 }
 
 
-@media only screen and (max-width: 600px) {
-    #footer {
-        height: 140px;
-        flex-direction: column;
-        text-align: center;
-    }
-    .main h2 {
-        font-size: 40px;
-        }
-}
 
 
-/* FLOR */
+
+/* QUIENES SOMOS */
 .nosotros__textos {
     margin: 80px 0;
 }
@@ -172,20 +163,81 @@ width: 150px;
 .objetivo__imagen{
     width: 500px;
 }
-/* FLOR */
+/*  QUIENES SOMOS  */
 
 
 /* BLOG */
-
 #blog {
     margin: 2rem; 
-    border: 1px solid green;
+    /* border: 1px solid green; */
 }
 
 .blog-article {
     margin: 2rem;
-    border: 1px solid red
+    /* border: 1px solid red; */
+    background-color: #c8f1ff;
+    border-top-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    padding: 2rem;
+   
 }
 
 
+.blog-article img {
+    width: 400px;
+}
+
+.blog-article-title {
+    font-weight: bold;
+    font-size: 2rem;
+}
+
+.blog-article-text h4 {
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+.blog-article-text P  {
+    margin-bottom: 3rem;
+}
+
+.blog-article-btn {
+    background-color: #c4c4c4;
+    border-radius: 5px;
+    padding: 1rem;
+    color: black;
+    text-decoration: none;
+}
+
+.blog-article-btn:hover {
+    color:#f5501b;
+    text-decoration: none;
+}
 /* BLOG */
+
+
+/* RESPONSIVE */
+
+@media only screen and (max-width: 600px) {
+    /* FOOTER */
+    #footer {
+        height: 140px;
+        flex-direction: column;
+        text-align: center;
+    }
+    .main h2 {
+        font-size: 40px;
+    }
+    /* /FOOTER */
+    
+    /* BLOG */
+    #blog {
+        margin: 0; 
+        /* border: 1px solid green; */
+    }
+    /* /BLOG */
+}
+
+
+/* /RESPONSIVE */
