--- a/css/main.css
+++ b/css/main.css
@@ -27,12 +27,10 @@ h6 {
     font-family: 'Montserrat', sans-serif;
 }
 
-header {
-    background-color: #c4c4c4;
-}
+
 
 ul li a {
-    color: black;
+    color: white;
     font-weight: bold;
 }
 
@@ -42,15 +40,14 @@ ul li a {
 
 .dropdown-menu{
     background-color: #c4c4c4;
-    color: black;
     font-weight: bold;
 }
-/* .navbar-toggler {
-    background-color: white;
-} */
+
+.navbar-dark .navbar-nav .nav-link {
+    color: white;
+}
 
 .navbar-toggler-icon {
-    background-color: #ffffff;
     color: black;
     border-radius: 50%;
     background-image: url(../img/hoja.png);
@@ -59,7 +56,8 @@ ul li a {
 
 #header {
     padding: 0 50px;
-    background-color: #c4c4c4;
+    background-color: #181817;
+
 }
 
 #header img {
@@ -108,9 +106,8 @@ ul li a {
     height: 70px;
     padding: 0 50px;
     padding-top: 20px;
-    background-color: silver;
+    background-color: #181817;
     font-weight: bold;
-
 }
 
 #footer ul {
@@ -125,7 +122,11 @@ ul li a {
 }
 
 #footer ul li a {
-    color: black;
+    color: white;
+}
+
+#footer p{
+    color: white;
 }
 
 #whatsapp:hover {
