--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,4 @@
-/* @font-face {
-    font-family: 'Prototype';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Prototype'), url('Prototype.woff') format('woff');
-} */
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     margin: 0;
@@ -28,18 +20,18 @@ h6 {
 }
 
 
-
 ul li a {
-    color: white;
+    color: white !important;
     font-weight: bold;
 }
 
-.navbar-nav li a:hover {
+ul li a:hover {
     color: #f5501b !important;
 }
 
 .dropdown-menu{
-    background-color: #c4c4c4;
+    background-color:black;
+    color: black;
     font-weight: bold;
 }
 
@@ -47,16 +39,17 @@ ul li a {
     color: white;
 }
 
-
+.navbar-dark .navbar-nav .active>.nav-link {
+    border-bottom: 5px solid #27AEFD;
+}
 
 #header {
     padding: 0 50px;
-    background-color: #181817;
-
+    background-color:#181817 !important;
 }
 
 #header img {
-    width: 140px;
+    width: 150px;
 }
 
 
@@ -75,7 +68,7 @@ ul li a {
 
 .main {
     position: relative;
-    background-image: url(../img/virreyes.jpeg);
+    background-image: url(../img/inicio-fondo.jpeg);
     padding: 20vh 0;
     background-size: cover;
     background-repeat: no-repeat;
@@ -101,8 +94,9 @@ ul li a {
     height: 70px;
     padding: 0 50px;
     padding-top: 20px;
-    background-color: #181817;
+    background-color: black;
     font-weight: bold;
+
 }
 
 #footer ul {
@@ -125,59 +119,107 @@ ul li a {
 }
 
 #whatsapp:hover {
-    color: #29a737;
+    color: #29a737 !important;
 }
 
 #facebook:hover {
-    color: #4267B2;
+    color: #4267B2 !important;
 }
 
 #instagram:hover {
-    color: #C13584;
+    color: #C13584 !important;
 }
 
 #youtube:hover {
-    color: #FF0000;
+    color: #FF0000 !important;
+}
+#linkedin:hover{
+    color: #27AEFD !important;
 }
 
-#linkedin:hover {
-    color: #2867B2;
+
+@media only screen and (max-width: 600px) {
+    #footer {
+        height: 140px;
+        flex-direction: column;
+        text-align: center;
+    }
+    .main h2 {
+        font-size: 40px;
+        }
 }
 
-
-
-
-/*  QUIENES SOMOS */
+/* ¿Quienes somos?*/
 .nosotros__textos {
     margin: 80px 0;
 }
+.nosotros__contenedor__imagen{
+    text-align: center;
+    padding: 60px 0;
+}
+.objetivo__contenedor__imagen{
+    text-align: center;
+    padding: 0 0 60px 0;}
 
 .nosotros__imagen {
-    width: 500px;
+    width: 450px;
 }
 
+#quienes-somos {
+    font-size: 60px;
+}
 .queHacemos {
     margin: 100px 0;
 }
 
-.queHacemos__textos {
-    text-align: center;
+.queHacemos__cuadro{
+    background-image: url(../img/inicio-recuadros.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-attachment:local;
 }
-
+.queHacemos__cardGroup{
+    width: 80%;
+    margin: auto;
+}
+.queHacemos__cardGroup .card-text{
+    font-size: 15px;
+}
 .queHacemos__textos h2 {
-    font-size: 60px;
+    font-size: 30px;
     letter-spacing: 10px;
 }
 
 .queHacemos__textos p {
-    font-size: 40px;
+    font-size: 20px;
 }
 
 .objetivo__imagen {
-    width: 500px;
+    width: 450px;
+}
+.ppp p{
+    display: inline-block;
+    padding: 20px 20px 20px 0;
+}
+.potenciar{
+    color:#FFB300 ;
+}
+.conectar{
+    color: #a5df2a;
+}
+.integrar{
+    color: #27AEFD;
 }
 
-/* QUIENES SOMOS */
+.card__1{
+    background-color: #a1a1a1;
+    border: none;
+}
+.card__2{
+    background-color: #dfd9d9;
+    border: none;
+}
 
 /* CAPACITATE */
 .cursos__columna{
@@ -191,27 +233,40 @@ ul li a {
     letter-spacing: 8px;
     margin: 30px 0 ;
 }
-.curso_instagram{
-    width: 200px;
-}
-.curso_mercadolibre{
-    width: 200px;
+.curso_imagen{
+    width: 300px;
     margin: 10px;
 }
 
 .cursos__boton{
-    background-color: #a5df2a;
+    background-color: #27AEFD;
     border-radius: 10px;
     border: none;
     padding: 10px;
 }
 
 .cursos__fondo{
-    background-color: #27AEFD;
-    border: 5px solid #27AEFD;
     border-radius: 30px 0px 30px 0px;
     padding: 30px;
 }
+
+.testimonios__imagenes{
+    margin: auto;
+}
+.testimonios__imagenes img{
+    width: 300px;
+}
+
+.row{
+    margin:0;
+}
+.row__molesta{
+    padding: 40px 0;
+}
+.col__card{
+    margin: auto;
+}
+
 /* CAPACITATE */
 
 /*VENI A SEMBRAR */
@@ -234,31 +289,48 @@ ul li a {
 }
 
 .staff__titulo {
-    margin: 70px 0;
+    margin: 50px 0;
 }
 
 .card-deck {
     padding: 10px 0;
 }
 
-.card-body {
-    padding: 0px;
+.card__body {
+    padding: 20px 0px;
     text-align: center;
 }
 
-.card-title {
-    background-color: #27AEFD;
-    padding: 10px 0;
+.card__body__1{
+    border: 5px solid #27AEFD;
+    border-radius: 30px 0px 30px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
+.card__body__2{
+    border: 5px solid #FFB300;
+    border-radius: 30px 0px 30px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .card-text {
     padding: 5px;
     font-size: 20px;
 }
-
-.card_title_sembradores {
-    background-color: #a5df2a;
+.card__text{
+    font-size: 15px;
 }
+.card__body__1 img, .card__body__2 img{
+    width: 60px;
+}
+
+.card{
+    border: none;
+}
+
 /*VENI A SEMBRAR*/
 
 /* BLOG */
@@ -329,6 +401,78 @@ ul li a {
     
 }
 /* BLOG */
+
+
+/*CONTACTO */
+.form-group{
+    width: 80%;
+    margin: auto;
+    padding: 20px 0;
+}
+/*CONTACTO */
+.boton__form{
+    background-color: #27AEFD;
+    border-radius: 10px;
+    border: none;
+    padding: 10px;
+}
+
+.boton__form__lugar{
+    display: grid;
+}
+.boton__form__estudio{
+    background-color: #27AEFD;
+    border-radius: 10px;
+    border: none;
+    padding: 10px;
+    color: black;
+    text-align: center;
+}
+
+.contacto__titulo{
+    margin: 50px 0;
+}
+
+.contacto__acordeon{
+    margin: 0 0 80px 0;
+}
+
+.btn-link{
+    color: black;
+}
+.btn-link:hover{
+    color: #f5501b;
+}
+
+#headingOne{
+    border: 5px solid #27AEFD;
+    border-radius: 70px;
+    margin: 10px 0;
+}
+#headingTwo{
+    border: 5px solid #FFB300;
+    border-radius: 70px;
+    margin: 10px 0;
+}
+#headingThree{
+    border: 5px solid #a5df2a;
+    border-radius: 70px;
+    margin: 10px 0;
+}
+
+.contacto__redes{
+    text-align: center;
+    font-size: 20px;
+    padding: 0 0 60px 0;
+}
+.contacto__redes .fab{
+    font-size: 40px;
+}
+.card__header{
+    background-color: rgba(0,0,0,.01);
+    border-radius: 70px;
+    border: none; 
+}
 
 /* RESPONSIVE */ 
 @media only screen and (max-width: 600px) {
